#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

==============

Tag: V01-00-04
2017-05-19 Mikhail S. Dubrovin
- add parameter thr_fraction=0.9 to AreaDetector.photons method

Tag: V01-00-03
???

Tag: V01-00-02
???

Tag: V01-00-01
2017-04-17 Mikhail S. Dubrovin
- switch to github, det_ndarr_raw_proc - fix inconsistent dtypes in numpy operations

Tag: V00-04-14
2017-01-04 Mikhail S. Dubrovin
- update ex_new_dets.py, ex_source_dsname.py for jungfrau

Tag: V00-04-13
2016-12-20 Christopher O'Grady
- Add jungfrau

Tag: V00-04-12
2016-12-12 TJ and Chris
- thisFiducialOnly to this_fiducial_only

Tag: V00-04-11
2016-12-12 Christopher O'Grady
- add support to not crash when detector is missing

Tag: V00-04-10
2016-12-09 Jacob Scott and Christopher O'Grady
- in common mode test, set parameters to nominal default values,
  since test data has them over-ridden by calib-dir values.

Tag: V00-04-09
2016-12-09 Jacob Scott and Christopher O'Grady
- add test in detectortest for cspad common mode

Tag: V00-04-08
2016-12-9 David Schneider
- add HX2-BEAMMON-01 to detector xface for pdsdata 8.6.19
	
Tag: V00-04-07
2016-12-08 Mikhail S. Dubrovin
- eliminate printout from DCStore
	
Tag: V00-04-06
2016-12-07 Jacob Scott and Christopher O'Grady
- add support for calling common mode algorithm cm_epix.py in PyDetectorAccess.py and AreaDetector.py

Tag: V00-04-05
2016-12-05 Christopher O'Grady
- add new flag for evr eventCodes method that allows returning of only
  eventcodes that were sent on precisely this fiducial

Tag: V00-04-04
2016-11-22 Mikhail S. Dubrovin
- add fallback support for geometry from DCS