@@ -73,6 +73,9 @@ def ex_source_dsname(ntest) :
     elif ntest == 20: # (1, 1024, 512)
         src, dsn = ':Jungfrau.0', '/reg/g/psdm/detector/data_test/types/0024-CxiEndstation.0-Jungfrau.0.xtc'
 
+    elif ntest == 21: # (2160, 2560)
+        src, dsn = ':Zyla.0', '/reg/g/psdm/detector/data_test/types/0025-XppEndstation.0-Zyla.0.xtc'
+
     else :
         sys.exit('Non-implemented sample for test number # %d' % ntest)
 
