@@ -586,6 +586,7 @@ class PyDetectorAccess :
         elif self.dettype == gu.TIMEPIX    : return self.raw_data_timepix(evt, env)
         elif self.dettype == gu.FLI        : return self.raw_data_fli(evt, env)
         elif self.dettype == gu.PIMAX      : return self.raw_data_pimax(evt, env)
+        elif self.dettype == gu.ZYLA       : return self.raw_data_zyla(evt, env)
         else                               : return None
 
 ##-----------------------------
@@ -858,6 +859,21 @@ class PyDetectorAccess :
 
         # configuration object
         #c = pda.get_pimax_config_object(env, self.source)
+        #if c is None : return None
+        #print 'config: width: %d, height: %d' % (c.width(), c.height())
+
+        nda = d.data()
+        return nda if nda is not None else None
+
+##-----------------------------
+
+    def raw_data_zyla(self, evt, env) :
+        # data object
+        d = pda.get_zyla_data_object(evt, self.source)
+        if d is None : return None
+
+        # configuration object
+        #c = pda.get_zyla_config_object(env, self.source)
         #if c is None : return None
         #print 'config: width: %d, height: %d' % (c.width(), c.height())
 
@@ -1231,6 +1247,14 @@ class PyDetectorAccess :
         #return (c.height()/c.binY(), c.width()/c.binX())  # (1024, 1024)
 
 
+    def shape_config_zyla(self, env) :
+        # configuration from data file
+        c = pda.get_zyla_config_object(env, self.source)
+        if c is None : return None
+        return (c.numPixelsY(), c.numPixelsX())
+        #return (c.height()/c.binY(), c.width()/c.binX())  # (1024, 1024)
+
+
     #def shape_config_imp(self, env) :
     #    #Waveform detector
     #    # configuration from data file
@@ -1299,6 +1323,7 @@ class PyDetectorAccess :
         elif self.dettype == gu.TIMEPIX    : return self.shape_config_timepix(env)
         elif self.dettype == gu.FLI        : return self.shape_config_fli(env)
         elif self.dettype == gu.PIMAX      : return self.shape_config_pimax(env)
+        elif self.dettype == gu.ZYLA       : return self.shape_config_zyla(env)
 
         # waveform detectors:
         #elif self.dettype == gu.ACQIRIS    : return self.shape_config_acqiris(env)
